# learning_c

./: .gitignore  CMakeLists.txt  README.md  playground.c
area_of_circle/: CMakeLists.txt
area_of_circle/area_of_circle_output/: Makefile  area_of_circle_output.cbp  cmake_install.cmake
arrays/arrays/: Makefile  arrays  arrays.cbp  cmake_install.cmake
compare_strings_in_if/: CMakeLists.txt  main.c
compare_strings_in_if/compare_strings_in_if_output/: Makefile  cmake_install.cmake  compare_strings_in_if  compare_strings_in_if.cbp
data_types/: CMakeLists.txt  main.c
data_types/data_types_output/: Makefile  cmake_install.cmake  data_types  data_types.cbp
declaration_vs_definition/: CMakeLists.txt  main.c
declaration_vs_definition/declaration_vs_definition_output/: Makefile  cmake_install.cmake  declaration_vs_definition.cbp
dereference_operator/: CMakeLists.txt  add
dereference_operator/dereference_operator_output/: Makefile  cmake_install.cmake  dereference_operator  dereference_operator.cbp
enum/: CMakeLists.txt  main.c
enum/enum_output/: Makefile  cmake_install.cmake  enum  enum.cbp
find_position_in_array/: CMakeLists.txt  main.c
find_position_in_array/find_position_in_array_output/: Makefile  cmake_install.cmake  find_position_in_array  find_position_in_array.cbp
float/: CMakeLists.txt  main.c
float/float_output/: Makefile  cmake_install.cmake  float  float.cbp
guessing_game/: CMakeLists.txt  main.c
guessing_game/guessing_game_output/: Makefile  cmake_install.cmake  guessing_game  guessing_game.cbp
hypotenuse/: CMakeLists.txt  main.c
hypotenuse/hypotenuse_output/: Makefile  cmake_install.cmake  hypotenuse  hypotenuse.cbp
if_user_input/: CMakeLists.txt  main.c
if_user_input/if_user_input_output/: Makefile  cmake_install.cmake  if_user_input.cbp
keywords_and_identifiers/: CMakeLists.txt  main.c
keywords_and_identifiers/keywords_and_identifiers_output/: Makefile  cmake_install.cmake  keywords_and_identifiers.cbp
looping_through_2D_array/: CMakeLists.txt  main.c
looping_through_2D_array/looping_through_2D_array/: Makefile  cmake_install.cmake  looping_through_2D_array  looping_through_2D_array.cbp
main_argc_argv/: CMakeLists.txt  add  main.c
main_argc_argv/main_argc_argv_output/: Makefile  cmake_install.cmake  main_argc_argv  main_argc_argv.cbp
nested_for_loop/: CMakeLists.txt  main.c
nested_for_loop/nested_for_loop/: Makefile  cmake_install.cmake  nested_for_loop  nested_for_loop.cbp
pointers/: CMakeLists.txt  main.c
pointers/pointers_output/: Makefile  cmake_install.cmake  pointers  pointers.cbp
print_numbers/: CMakeLists.txt  main.c
print_numbers/print_numbers/: Makefile  cmake_install.cmake  print_numbers  print_numbers.cbp
read_and_print_array/: CMakeLists.txt  main.c
read_and_print_array/read_and_print_array_output/: Makefile  cmake_install.cmake  read_and_print_array  read_and_print_array.cbp
solar_system_quiz/: CMakeLists.txt  main.c
solar_system_quiz/solar_system_quiz_output/: Makefile  cmake_install.cmake  solar_system_quiz  solar_system_quiz.cbp
store_strings_in_array/: CMakeLists.txt  main.c
store_strings_in_array/store_strings_in_array_output/: Makefile  cmake_install.cmake  store_strings_in_array  store_strings_in_array.cbp
strings/: CMakeLists.txt  main.c
strings/strings_output/: Makefile  cmake_install.cmake  strings  strings.cbp
strings2/: CMakeLists.txt  main.c
strings2/strings2/: Makefile  cmake_install.cmake  strings2  strings2.cbp
structs/structs/: Makefile  cmake_install.cmake  structs.cbp
switch/: CMakeLists.txt  main.c
switch/switch_output/: Makefile  cmake_install.cmake  switch  switch.cbp
type_cast_operator/: CMakeLists.txt  main.c
type_cast_operator/type_cast_operator_output/: Makefile  cmake_install.cmake  type_cast_operator  type_cast_operator.cbp
type_casting/: CMakeLists.txt  main.c
type_casting/type_casting_output/: Makefile  cmake_install.cmake  type_casting  type_casting.cbp
union/: CMakeLists.txt  main.c
union/union_output/: Makefile  cmake_install.cmake  union  union.cbp  union_data_type  union_data_type.cbp
using_functions/: CMakeLists.txt
using_functions/using_functions_output/: Makefile  cmake_install.cmake  functions.cbp  union_data_type.cbp
using_structs/: CMakeLists.txt  main.c
using_structs/structs/: Makefile  structs.cbp
using_structs/using_structs/: Makefile  cmake_install.cmake  using_structs  using_structs.cbp
variables_expressions_statements/: CMakeLists.txt  main.c
variables_expressions_statements/variables_expressions_statements_output/: Makefile  cmake_install.cmake  variables_expressions_statements  variables_expressions_statements.cbp
